# EntropyCheck

./: CMakeLists.txt  README.md
Source/: EntropyCheck.c  EntropyCheck.h  EntropyCheck.hpp
Test/: test_cpp.cpp
